--- a/WebBellwether.Web/index.html
+++ b/WebBellwether.Web/index.html
@@ -17,13 +17,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 </head>
 <body data-ng-app="webBellwether" data-ng-controller="translationController">
-    <!--<video autoplay loop poster="/appData/videos/CloudFly.jpg" id="bgvid">
+    <video autoplay loop poster="/appData/videos/CloudFly.jpg" id="bgvid">
 
         <source src="/appData/videos/CloudFly.webm" type="video/webm">
 
         <source src="/appData/videos/CloudFly.mp4" type="video/mp4">
 
-    </video>-->
+    </video>
 
     <div data-ng-controller="indexController" role="navigation">
         <!--Header-->
@@ -34,7 +34,7 @@
             <div id="myView" class="page page-rotateFall" ng-view fix-position-absolute></div>
         </div>
         <footer>
-            <ul class="bg-bubblesFooter">
+            <!--<ul class="bg-bubblesFooter">
                 <li></li>
                 <li></li>
                 <li></li>
@@ -50,7 +50,7 @@
                 <li></li>
                 <li></li>
                 <li></li>
-            </ul>
+            </ul>-->
             <div class="imageContainerMyFooter" style="background-image: url(/appData/images/footer/113.png); z-index: 2"></div>
         </footer>
     </div>
