--- a/WebBellwether.Web/app/home/header.html
+++ b/WebBellwether.Web/app/home/header.html
@@ -4,23 +4,42 @@
     </div>
 
     <div class="imageContainer zIndex2" style="background-image: url(/appData/images/header/23nR.png);">
-        <div data-ng-hide="!authentication.isAuth" style="color: white;text-align: center; margin-top: 300px; font-weight: bold">
+        <!--<div data-ng-hide="!authentication.isAuth" style="color: white;text-align: center; margin-top: 300px; font-weight: bold">
             {{translation.HaveFun}} {{authentication.userName}}
-        </div>
+        </div>-->
     </div>
 
     <div class="menu">
         <div class="container">
             <div class="app-bar myDarcula" data-role="appbar">
+                <div class="app-bar-element">
+                    <label style="text-decoration: none; color: darkorange" href="" class="dropdown-toggle"><span class="mif-search mif-ani-pulse"></span>{{translation.Search}}</label>
+                    <div class="app-bar-drop-container place-left" data-role="dropdown" data-no-close="true">
+                        <div ng-include src="'/app/search/search.html'"></div>
+                        <!--<ul class="bg-bubblesFooter">
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>-->
+                    </div>
+                </div>
                 <ul class="app-bar-menu">
+
                     <!--HOME-->
                     <li></li>
                     <li data-flexorderorigin="0" data-flexorder="0" class="">
-                        <a style="text-decoration: none ; color: darkorchid;font-weight:bold" href="#/home"><span class="mif-home mif-ani-heartbeat"></span>{{translation.Home}}</a>
+                        <a style="text-decoration: none; color: darkorchid; font-weight: bold" href="#/home"><span class="mif-home mif-ani-heartbeat"></span>{{translation.Home}}</a>
                     </li>
                     <!--LANGUAGES-->
                     <li data-flexorderorigin="1" data-flexorder="2" class="">
-                        <label style="text-decoration: none; color:crimson" href="" class="dropdown-toggle"><span class="mif-bubble mif-ani-float"></span>{{translation.Language}}</label>
+                        <label style="text-decoration: none; color: crimson" href="" class="dropdown-toggle"><span class="mif-bubble mif-ani-float"></span>{{translation.Language}}</label>
                         <ul class="d-menu" data-role="dropdown">
                             <li ng-repeat="language in languages">
                                 <a ng-class="{true : 'mif-checkmark',false: ''}[language.Id==selectedLanguage]" href="" ng-model="language.id" ng-click="translate(language.Id)"><span ng-class="{true : 'myMarginLeft3px',false: ''}[language.Id==selectedLanguage]"></span> {{language.LanguageName}}</a>
@@ -32,14 +51,14 @@
                         <label style="text-decoration: none;" href="" class="dropdown-toggle"><span class="mif-wrench mif-ani-spanner"></span>{{translation.Tools}}</label>
                         <ul class="d-menu" data-role="dropdown" style="display: none;">
                             <li>
-                                <a href="" style="color:#ffffff !important;" class="dropdown-toggle">{{translation.ManagementGames}}</a>
+                                <a href="" style="color: #ffffff !important;" class="dropdown-toggle">{{translation.ManagementGames}}</a>
                                 <ul class="d-menu" data-role="dropdown">
                                     <li><a href="#/managementIntegrationGame">{{translation.ManagementGames}}</a></li>
                                     <li><a href="#/gameFeatureManagement">{{translation.ManagementIntegrationGameFeatures}}</a></li>
                                 </ul>
                             </li>
                             <li>
-                                <a href="" style="color:#ffffff !important;" class="dropdown-toggle">{{translation.ManagementJokes}}</a>
+                                <a href="" style="color: #ffffff !important;" class="dropdown-toggle">{{translation.ManagementJokes}}</a>
                                 <ul class="d-menu" data-role="dropdown">
                                     <li><a href="#/jokeManagement">{{translation.ManagementJokes}}</a></li>
                                     <li><a href="#/jokeCategoryManagement">{{translation.ManagementJokeCategories}}</a></li>
@@ -51,40 +70,23 @@
                             <li>
                                 <a href="#/versionManagement">{{translation.ManagementVersions}}</a>
                             </li>
-                            <li>
+                            <!--<li>
                                 <a href="#/tokens">{{translation.ManagementAccounts}}</a>
-                            </li>
+                            </li>-->
                         </ul>
                     </li>
                 </ul>
                 <!--SEARCH-->
-                <div class="app-bar-element">
-                    <label style="text-decoration: none; color: darkorange" href="" class="dropdown-toggle"><span class="mif-search mif-ani-pulse"></span>{{translation.Search}}</label>
-                    <div class="app-bar-drop-container place-left" data-role="dropdown" data-no-close="true">
-                        <div ng-include src="'/app/search/search.html'"></div>
-                        <ul class="bg-bubblesFooter">
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                        </ul>
-                    </div>
-                </div>
+
                 <!--AUTHENTICATION-->
                 <div data-ng-hide="!authentication.isAuth" class="app-bar-element place-right">
-                    <label style="text-decoration: none;color: chartreuse" data-ng-click="logOut()">
+                    <label style="text-decoration: none; color: chartreuse" data-ng-click="logOut()">
                         <span style="" class="mif-exit mif-ani-shuttle"></span>{{translation.LogOut}}
                     </label>
                 </div>
 
                 <div data-ng-hide="authentication.isAuth" class="app-bar-element place-right">
-                    <label style="text-decoration: none;color: chartreuse" class="dropdown-toggle"><span class="mif-enter mif-ani-shuttle"></span>{{translation.Login}}</label>
+                    <label style="text-decoration: none; color: chartreuse" class="dropdown-toggle"><span class="mif-enter mif-ani-shuttle"></span>{{translation.Login}}</label>
                     <div class="app-bar-drop-container place-right" data-role="dropdown" data-no-close="true">
                         <div ng-include src="'/app/authorizations/authentication.html'"></div>
                         <ul class="bg-bubblesFooter">
@@ -101,7 +103,8 @@
                         </ul>
                     </div>
                 </div>
-                <div class="app-bar-pullbutton automatic" style="display: none;"></div><div class="clearfix" style="width: 0;"></div><nav class="app-bar-pullmenu hidden flexstyle-app-bar-menu" style="display: none;"><ul class="app-bar-pullmenubar app-bar-menu hidden" style="display: none;"></ul></nav>
+                <div class="app-bar-pullbutton automatic" style="display: none;"></div>
+                <div class="clearfix" style="width: 0;"></div><nav class="app-bar-pullmenu hidden flexstyle-app-bar-menu" style="display: none;"><ul class="app-bar-pullmenubar app-bar-menu hidden" style="display: none;"></ul></nav>
             </div>
         </div>
     </div>
