--- a/WebBellwether.Web/app/jokes/joke.html
+++ b/WebBellwether.Web/app/jokes/joke.html
@@ -12,6 +12,6 @@
     <!--PAGER CONTROL-->
     <div class="row" ng-show="(jokes |filter:search).length / entryLimit > 1">
         <uib-pagination ng-change="pageChanged()" style="display: inline-block; position: relative;top:71px; z-index: 3;" direction-links="false" max-size="maxSize" ng-model="currentPage" total-items="(jokes |filter:search).length" items-per-page="entryLimit" num-pages="noOfPages" rotate="false"></uib-pagination>
-        <uib-pager ng-change="pageChanged()" style="position: relative;" total-items="(jokes |filter:search).length" max-size="maxSize" ng-model="currentPage" items-per-page="entryLimit" num-pages="noOfPages"></uib-pager>
+        <uib-pager ng-change="pageChanged()"  previous-text="<-" next-text="->" style="position: relative;" total-items="(jokes |filter:search).length" max-size="maxSize" ng-model="currentPage" items-per-page="entryLimit" num-pages="noOfPages"></uib-pager>
     </div>
 </div>
